# store-hub

./: README.md  com.github.ffrancoc.StoreHub.json  meson.build  pypi-dependencies.json
data/: com.github.ffrancoc.StoreHub.desktop.in  com.github.ffrancoc.StoreHub.gschema.xml  com.github.ffrancoc.StoreHub.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.py  meson.build  storehub.gresource.xml  storehub.in  window.py
src/gtk/: window.blp
src/gtk/pages/: login.blp
src/lib/: db.py
src/pages/: login.py
src/widgets/: dialogs.py
